.airflow/logs/dag_id=data_extraction_to_snowflake/run_id=manual__2025-07-14T23:05:21.148984+00:00/task_id=processing_tables/map_index=0/attempt=1.log
[2025-07-14T23:05:23.899+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: data_extraction_to_snowflake.processing_tables manual__2025-07-14T23:05:21.148984+00:00 map_index=0 [queued]>
[2025-07-14T23:05:23.912+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: data_extraction_to_snowflake.processing_tables manual__2025-07-14T23:05:21.148984+00:00 map_index=0 [queued]>
[2025-07-14T23:05:23.913+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2025-07-14T23:05:23.933+0000] {taskinstance.py:2191} INFO - Executing <Mapped(_PythonDecoratedOperator): processing_tables> on 2025-07-14 23:05:21.148984+00:00
[2025-07-14T23:05:23.946+0000] {standard_task_runner.py:60} INFO - Started process 113 to run task
[2025-07-14T23:05:23.949+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'data_extraction_to_snowflake', 'processing_tables', 'manual__2025-07-14T23:05:21.148984+00:00', '--job-id', '105', '--raw', '--subdir', 'DAGS_FOLDER/etl_transfer_to_stage.py', '--cfg-path', '/tmp/tmpf31n9o3l', '--map-index', '0']
[2025-07-14T23:05:23.951+0000] {standard_task_runner.py:88} INFO - Job 105: Subtask processing_tables
[2025-07-14T23:05:24.022+0000] {task_command.py:423} INFO - Running <TaskInstance: data_extraction_to_snowflake.processing_tables manual__2025-07-14T23:05:21.148984+00:00 map_index=0 [running]> on host ba480c39b9ec
[2025-07-14T23:05:24.108+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='data_extraction_to_snowflake' AIRFLOW_CTX_TASK_ID='processing_tables' AIRFLOW_CTX_EXECUTION_DATE='2025-07-14T23:05:21.148984+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-07-14T23:05:21.148984+00:00'
[2025-07-14T23:05:24.116+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2025-07-14T23:05:24.130+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2025-07-14T23:05:24.157+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2025-07-14T23:05:24.168+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 241, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_transfer_to_stage.py", line 103, in processing_each_table
    cursor.execute(insert_query,row)
psycopg2.errors.SyntaxError: syntax error at or near "1"
LINE 1: ...VES.job_info (id, job_title_id, job_title) VALUES 1, 1135, '...
                                                             ^

[2025-07-14T23:05:24.174+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=data_extraction_to_snowflake, task_id=processing_tables, map_index=0, execution_date=20250714T230521, start_date=20250714T230523, end_date=20250714T230524
[2025-07-14T23:05:24.185+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 105 for task processing_tables (syntax error at or near "1"
LINE 1: ...VES.job_info (id, job_title_id, job_title) VALUES 1, 1135, '...
                                                             ^
; 113)
[2025-07-14T23:05:24.213+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-14T23:05:24.228+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
